--- a/Day01-Javascrip_Drum_Kit/index.html
+++ b/Day01-Javascrip_Drum_Kit/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drum Kit</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="keys">
@@ -55,7 +56,28 @@
     <audio data-key="76" src="sounds/tink.wav"></audio>
 
     <script>
-        
+        const keys = Array.from(document.querySelectorAll('.key'));  
+        console.log(keys);    
+        window.addEventListener('keydown', playSound)
+        keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+
+        function playSound(e){
+          console.log(e.keyCode);
+          const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+          const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+          if(!audio)
+            return;
+
+          key.classList.add('playing');
+          audio.currentTime = 0;
+          audio.play();
+        } 
+
+        function removeTransition(e) {
+          if (e.propertyName !== 'transform') 
+            return;
+          e.target.classList.remove('playing');
+  }
     </script>
 </body>
 </html>
